Update logs and update swagger docs
